# llm-groq-whisper

./: README.md  llm_groq_whisper.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_groq_whisper.py
