[project]
name = "llm-groq-whisper"
version = "0.1a0"
description = "Transcribe audio using the Groq.com Whisper API"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "llm"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-groq-whisper"
Changelog = "https://github.com/simonw/llm-groq-whisper/releases"
Issues = "https://github.com/simonw/llm-groq-whisper/issues"
CI = "https://github.com/simonw/llm-groq-whisper/actions"

[project.entry-points.llm]
groq_whisper = "llm_groq_whisper"

[project.optional-dependencies]
test = ["pytest", "cogapp"]
